tests/errors/missing-reference-file.wit
reference ./nonexistent.wit

@x
  - uses other
x@
